--- a/README.Rmd
+++ b/README.Rmd
@@ -13,27 +13,27 @@ knitr::opts_chunk$set(
 )
 ```
 
-# apollo13
+# applepie
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of apollo13 is to access R-universe API from R, for a tutorial.
+The goal of applepie is to access R-universe API from R, for a tutorial.
 
 ## Installation
 
-You can install the released version of apollo13 with:
+You can install the released version of applepie with:
 
 ``` r
 # install.packages("remotes")
-remotes::install_github("maelle/apollo13")
+remotes::install_github("maelle/applepie")
 ```
 ## Example
 
 This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
-library(apollo13)
+library(applepie)
 ## List packages in the rOpenSci R-universe
 ropensci_universe_pkgs <- get_packages("ropensci")
 head(ropensci_universe_pkgs)
